--- a/PornTokF/PornTokF.Android/Properties/AndroidManifest.xml
+++ b/PornTokF/PornTokF.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.porntokf" android:installLocation="auto">
-	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="30" />
-	<application android:label="PornTokF.Android" android:theme="@style/MainTheme"></application>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="2" android:versionName="1.1" package="com.gavrilenkosergey.porntok" android:installLocation="auto">
+	<uses-sdk android:minSdkVersion="23" android:targetSdkVersion="30" />
+	<application android:label="PornTok" android:theme="@style/MainTheme" android:icon="@drawable/logo"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
