--- a/PornTokF/PornTokF.UWP/PornTokF.UWP.csproj
+++ b/PornTokF/PornTokF.UWP/PornTokF.UWP.csproj
@@ -162,6 +162,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Acr.UserDialogs">
+      <Version>7.1.0.483</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.FFImageLoading.Forms">
       <Version>2.4.11.982</Version>
     </PackageReference>
