--- a/PornTokF/PornTokF.UWP/PornTokF.UWP.csproj
+++ b/PornTokF/PornTokF.UWP/PornTokF.UWP.csproj
@@ -165,6 +165,15 @@
     <PackageReference Include="Acr.UserDialogs">
       <Version>7.1.0.483</Version>
     </PackageReference>
+    <PackageReference Include="LibVLCSharp">
+      <Version>3.5.0</Version>
+    </PackageReference>
+    <PackageReference Include="LibVLCSharp.Forms">
+      <Version>3.5.0</Version>
+    </PackageReference>
+    <PackageReference Include="Octane.Xam.VideoPlayer">
+      <Version>3.1.0</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.FFImageLoading.Forms">
       <Version>2.4.11.982</Version>
     </PackageReference>
