--- a/PornTokF/PornTokF.Android/PornTokF.Android.csproj
+++ b/PornTokF/PornTokF.Android/PornTokF.Android.csproj
@@ -91,6 +91,9 @@
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
+    <PackageReference Include="Xamarin.Forms.PinchZoomImage">
+      <Version>1.1.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LogoActivity.cs" />
