--- a/PornTokF/PornTokF.UWP/PornTokF.UWP.csproj
+++ b/PornTokF/PornTokF.UWP/PornTokF.UWP.csproj
@@ -183,6 +183,9 @@
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.2.12" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
+    <PackageReference Include="Xamarin.Forms.PinchZoomImage">
+      <Version>1.1.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PornTokF\PornTokF.csproj">
