--- a/PornTokF/PornTokF.Android/PornTokF.Android.csproj
+++ b/PornTokF/PornTokF.Android/PornTokF.Android.csproj
@@ -80,6 +80,9 @@
     <PackageReference Include="Octane.Xam.VideoPlayer">
       <Version>3.1.0</Version>
     </PackageReference>
+    <PackageReference Include="Vapolia.XamarinFormsGesture">
+      <Version>3.3.1</Version>
+    </PackageReference>
     <PackageReference Include="VideoLAN.LibVLC.Android">
       <Version>3.2.0</Version>
     </PackageReference>
