--- a/PornTokF/PornTokF.iOS/PornTokF.iOS.csproj
+++ b/PornTokF/PornTokF.iOS/PornTokF.iOS.csproj
@@ -144,6 +144,9 @@
     <PackageReference Include="Octane.Xam.VideoPlayer">
       <Version>3.1.0</Version>
     </PackageReference>
+    <PackageReference Include="Vapolia.XamarinFormsGesture">
+      <Version>3.3.1</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.FFImageLoading.Forms">
       <Version>2.4.11.982</Version>
     </PackageReference>
