--- a/PornTokF/PornTokF/PornTokF.csproj
+++ b/PornTokF/PornTokF/PornTokF.csproj
@@ -29,6 +29,7 @@
     <PackageReference Include="LibVLCSharp.Forms" Version="3.5.0" />
     <PackageReference Include="LruCacheNet" Version="1.2.0" />
     <PackageReference Include="Octane.Xam.VideoPlayer" Version="3.1.0" />
+    <PackageReference Include="Vapolia.XamarinFormsGesture" Version="3.3.1" />
     <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.4.11.982" />
     <PackageReference Include="Xamarin.FFImageLoading.Svg.Forms" Version="2.4.11.982" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />  
