История Безопастный режим

--- a/PornTokF/PornTokF/PornTokF.csproj
+++ b/PornTokF/PornTokF/PornTokF.csproj
@@ -53,6 +53,9 @@
     <EmbeddedResource Update="Views\LoginPages\mainLogin.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\LoginPages\SettingsPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\LoginPages\Subscribes.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
