обновлен манифест под новую версию

--- a/PornTokF/PornTokF.Android/PornTokF.Android.csproj
+++ b/PornTokF/PornTokF.Android/PornTokF.Android.csproj
@@ -57,6 +57,7 @@
     <BundleAssemblies>false</BundleAssemblies>
     <EmbedAssembliesIntoApk>true</EmbedAssembliesIntoApk>
     <AndroidLinkTool>r8</AndroidLinkTool>
+    <MandroidI18n />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mono.Android" />
